--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -4,10 +4,10 @@
 
 <mat-sidenav-container *ngIf="userService.hasPermission('HabitRabbit.view_profilepicture')" class="sidenav-container">
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar >
       <button mat-button style="padding: 0.1% 0.1% 0.3% 0.1%; min-width: 35px; line-height: 30px"><i
         class="material-icons pointer" routerLink="dashboard">home</i></button>
-      <span class="title" routerLink="dashboard">HabitRabbit</span>
+      <span class="title" routerLink="dashboard">TechForce1</span>
       <span class="menuspacer"></span>
       <mat-divider style="height:50%" vertical></mat-divider>
       <ng-container *ngIf="isSuperUser">
