--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -6,8 +6,15 @@
   width: 200px;
 }
 
+.mat-toolbar {
+  color: #7BC143;
+  background-color: #124B8B;
+}
+
 .sidenav .mat-toolbar {
   background: inherit;
+  color: #7BC143;
+  background-color: #124B8B;
 }
 
 .mat-toolbar.mat-primary {
