Creating and setting up home Folder

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -278,6 +278,6 @@
     </mat-grid-tile>
   </mat-grid-list>
 </div>
-<footer><span class="footertext">&#9400;&ensp;️2020 HabitRabbit Team 🥕🐰</span>
+<footer><span class="footertext">&#9400;&ensp;️2020 TechForce Team 🛫</span>
   <button class="faqbutton" color="warn" mat-raised-button routerLink="../faq">FAQ</button>
 </footer>
