--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -14,7 +14,7 @@
   left: 15px;
   right: 15px;
   bottom: 15px;
-  background-color: #ece6f5;
+  background-color: #bec7f5;
   max-width: 100%;
   max-height: 100%;
 }
@@ -49,7 +49,7 @@
 }
 
 footer {
-  background-color: #613DB1;
+  background-color: #124B8B;
   height: 50px;
   font-size: larger;
   text-align: center;
@@ -250,7 +250,7 @@ footer {
 
 .friend-remove-button {
   color: white;
-  background-color: #B2102F;
+  background-color: #e6030b;
   padding: 0 0 0 0;
   min-width: 35px;
   max-width: 35px;
