Create link back to home

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
 <mat-sidenav-container *ngIf="userService.hasPermission('HabitRabbit.view_profilepicture')" class="sidenav-container">
   <mat-sidenav-content>
     <mat-toolbar >
-      <div class="logo">
+      <div class="logo pointer" routerLink="dashboard">
 <!--        <span class="levelText">{{level}}</span>-->
       </div>
 <!--      <button mat-button style="padding: 0.1% 0.1% 0.3% 0.1%; min-width: 35px; line-height: 30px"><i-->
