Adding the components from the theme

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,9 +1,5 @@
 <!-- Start your project here-->
-<app-main></app-main>
-<app-services></app-services>
-<app-projects></app-projects>
-<app-team></app-team>
-<app-contact></app-contact>
+<h3>Hello World</h3>
 <!-- /Start your project here-->
 
 <!--<div class="login-background">-->
