--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 
 <div *ngIf="userService.hasPermission('HabitRabbit.view_habit')" class="grid-container">
   <h1 class="mat-h1">Dashboard
-    <button (click)="generatePdf()" class="exportPDF" color="primary" mat-raised-button type="submit">Export Profile
+    <button (click)="generatePdf()" class="exportPDF" color="primary" mat-raised-button type="submit">Flight Plan
     </button>
   </h1>
   <mat-grid-list (window:resize)="onResize($event)" [cols]="breakpoint" rowHeight="300px">
@@ -17,16 +17,16 @@
             STATS
           </mat-card-title>
           <mat-card-subtitle class="stats">
-            <h2>⭐️ Level: {{level}} &emsp; 🥕 Score: {{score}}</h2>
+            <h2>🎖️️ Level: {{level}} &emsp; 💸 Sky Points: {{score}}</h2>
           </mat-card-subtitle>
           <mat-card-title>
-            USER INFORMATION
+            Pilot INFORMATION
           </mat-card-title>
           <mat-card-content class="dashboard-card-content">
             <div class="userWrapper">
               <div class="userStats">
                 <div class="userFirst">
-                  <div class="stat statfirst">Username:
+                  <div class="stat statfirst">Call Sign:
                     <div [ngStyle]="{'color': profileColor}" class="statValue">{{username}}</div>
                   </div>
                   <div class="stat statsecond">First Name:
@@ -158,7 +158,7 @@
           </mat-card>
         </mat-card-content>
       </mat-card>
-      <mat-card *ngIf="card.title === 'Charts' && !empty" class="dashboard-card">
+      <mat-card *ngIf="card.title === 'PIREP' && !empty" class="dashboard-card">
         <mat-card-header>
           <mat-card-title class="message-header">
             📊 {{card.title}}
@@ -216,7 +216,7 @@
             <mat-card-title class="message-header">📫 {{card.title}}</mat-card-title>
             <mat-card-subtitle class="dailyMessageC">
               <span class="dailyMessage">"{{dailyMessage}}"<br>
-                <span class="signature">-Habit Rabbit Team</span>
+                <span class="signature">-TechForce1 Team</span>
               </span>
             </mat-card-subtitle>
             <mat-card-content>
@@ -227,7 +227,7 @@
           </mat-card-header>
         </mat-card>
       </mat-card>
-      <mat-card *ngIf="card.title === 'Friends'" class="dashboard-card" style="overflow: scroll">
+      <mat-card *ngIf="card.title === 'Co-Pilots'" class="dashboard-card" style="overflow: scroll">
         <mat-card-header class="friendsHeader">
           <mat-card-title class="message-header">
             👨‍👩‍👧‍👦 {{card.title}}
@@ -250,12 +250,12 @@
             <mat-card-content>
               <table [dataSource]="dataSource" mat-table matSort>
                 <ng-container matColumnDef="username">
-                  <th *matHeaderCellDef mat-header-cell mat-sort-header> Username</th>
+                  <th *matHeaderCellDef mat-header-cell mat-sort-header> Call Sign</th>
                   <td *matCellDef="let friend" mat-cell> {{friend.username}} </td>
                 </ng-container>
                 <ng-container matColumnDef="score">
-                  <th *matHeaderCellDef mat-header-cell mat-sort-header> Score</th>
-                  <td *matCellDef="let friend" mat-cell> {{friend.score}}🥕</td>
+                  <th *matHeaderCellDef mat-header-cell mat-sort-header> Sky Points</th>
+                  <td *matCellDef="let friend" mat-cell> {{friend.score}}💸</td>
                 </ng-container>
                 <ng-container matColumnDef="actions">
                   <th *matHeaderCellDef mat-header-cell mat-sort-header></th>
