--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -11,6 +11,16 @@
 * Generated theme by Material Theme Generator
 * https://materialtheme.arcsine.dev
 */
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://cdn.quilljs.com/1.2.2/quill.snow.css');
+@import url('https://cdn.quilljs.com/1.2.2/quill.bubble.css');
+
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
+@import "../node_modules/dragula/dist/dragula.min.css";
+@import "../node_modules/@swimlane/ngx-datatable/themes/material.css";
+@import "../node_modules/@swimlane/ngx-datatable/assets/icons.css";
+@import "../node_modules/leaflet/dist/leaflet.css";
 
 @import '~@angular/material/theming';
 // Include the common styles for Angular Material. We include this here so that you only
