Completed modular connection to hero

--- a/frontend/src/app/pages/landing/landing.component.html
+++ b/frontend/src/app/pages/landing/landing.component.html
@@ -23,7 +23,7 @@
           <button *ngFor="let item of menuItems" mat-button [ngx-scroll-to]="item" [ngx-scroll-to-duration]="300" (click)="sidenav.toggle()" class="w-100">{{item}}</button>
     </mat-drawer>
 
-
+<app-hero></app-hero>
 
     <mat-drawer-content>
         <app-content-header id="home"
