--- a/frontend/src/app/pages/landing/landing.component.html
+++ b/frontend/src/app/pages/landing/landing.component.html
@@ -23,9 +23,12 @@
           <button *ngFor="let item of menuItems" mat-button [ngx-scroll-to]="item" [ngx-scroll-to-duration]="300" (click)="sidenav.toggle()" class="w-100">{{item}}</button>
     </mat-drawer>
 
-<app-hero></app-hero>
+
 
     <mat-drawer-content>
+      <div class="p-2">
+        <app-hero></app-hero>
+      </div>
         <app-content-header id="home"
             [icon]="'important_devices'"
             [title]="'Angular Material Design Admin Template'"
