--- a/frontend/src/app/pages/landing/landing.component.html
+++ b/frontend/src/app/pages/landing/landing.component.html
@@ -1,10 +1,9 @@
 <mat-toolbar class="landing-toolbar mat-elevation-z4">
     <div fxLayout="row" fxLayoutAlign="space-between center" fxFlex>
         <div fxLayout="row" fxLayoutAlign="center center">
-            <a routerLink="/" fxLayout="row" fxLayoutAlign="start center" class="logo">
-                <img src="assets/img/logo.png" alt="logo">
-                <span class="mx-2">ANNULAR</span>
-            </a>
+          <div class="logo pointer" routerLink="dashboard">
+            <!--        <span class="levelText">{{level}}</span>-->
+          </div>
         </div>
         <div fxLayout="row" fxLayoutAlign="center center">
             <div fxShow="false" fxShow.gt-sm>
@@ -35,7 +34,7 @@
             [desc]="'Annular implements the official Angular Material Design components and built with Angular CLI. No Bootstrap!, No jQuery! and Only TypeScript! Start creating your app with Annular template, 8 layouts, 8 color styles, 35+ pages'"
             [hideBreadcrumb]="true"
             [hasBgImage]="true"
-            [class]="'py-5 px-2'"></app-content-header>
+            [class]="'py-5 px-2 home'"></app-content-header>
 
         <div class="p-2">
             <app-features></app-features>
