--- a/frontend/src/app/pages/landing/landing.component.scss
+++ b/frontend/src/app/pages/landing/landing.component.scss
@@ -1,3 +1,26 @@
+@import '~@angular/material/theming';
+.logo {
+  position: relative;
+  right: 0.25em;
+  width: 280px;
+  height: 125px;
+  color: black;
+  text-align: center;
+  background-image: url("../../../assets/Resources/navbar/navbar_logo.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 280px;
+}
+
+.home {
+  background-color: #124b8b;
+  opacity: 100%;
+}
+
+app-content-header {
+  background-color: #00e5ff;
+}
+
 .landing-toolbar{
     position: fixed;
     top: 0;
@@ -113,5 +136,5 @@
 
 .p-1 {
   margin-top: -130px;
-  height: 1000px;
+  height: 1300px;
 }
