Added WHO DO WE SERVE?

--- a/frontend/src/app/pages/landing/landing.component.html
+++ b/frontend/src/app/pages/landing/landing.component.html
@@ -30,8 +30,13 @@
       </div>
         <app-content-header id="home"
             [icon]="'important_devices'"
-            [title]="'Angular Material Design Admin Template'"
-            [desc]="'Annular implements the official Angular Material Design components and built with Angular CLI. No Bootstrap!, No jQuery! and Only TypeScript! Start creating your app with Annular template, 8 layouts, 8 color styles, 35+ pages'"
+            [title]="'WHO DO WE SERVE?'"
+            [desc]="'The world of work itself and how we train for it is changing at an accelerating speed\n'+
+'but how we prepare the workforce for careers in technology hasn’t changed at the\n'+
+'same pace. This leaves people on that path feeling alone and unprepared. Techforce1\n'+
+'is ramping up to address the concerns of that group in a community wide collaborative\n'+
+'way. We will serve people at multiple entry points with the coordination of multiple\n'+
+'partners.'"
             [hideBreadcrumb]="true"
             [hasBgImage]="true"
             [class]="'py-5 px-2 home'"></app-content-header>
@@ -48,7 +53,7 @@
         <mat-toolbar color="primary" class="landing-footer mt-5">
             <div fxLayout.xs="column" fxLayout.gt-xs="row wrap" fxLayoutAlign="space-between center" class="w-100">
                 <span>Copyright ©2020 All Rights Reserved</span>
-                <span>made by <a mat-button href="https://themeforest.net/user/theme_season/portfolio" target="blank">Black Shields</a></span>
+                <span>made by <a mat-button href="https://black-shields.com" target="blank">Black Shields</a></span>
             </div>
         </mat-toolbar>
 
