Start up an admin.module

--- a/frontend/src/app/pages/landing/landing.component.html
+++ b/frontend/src/app/pages/landing/landing.component.html
@@ -31,12 +31,9 @@
         <app-content-header id="home"
             [icon]="'important_devices'"
             [title]="'WHO DO WE SERVE?'"
-            [desc]="'The world of work itself and how we train for it is changing at an accelerating speed\n'+
-'but how we prepare the workforce for careers in technology hasn’t changed at the\n'+
-'same pace. This leaves people on that path feeling alone and unprepared. Techforce1\n'+
-'is ramping up to address the concerns of that group in a community wide collaborative\n'+
-'way. We will serve people at multiple entry points with the coordination of multiple\n'+
-'partners.'"
+            [desc]="'The world of work itself and how we train for it is changing at an accelerating speed but how we prepare the workforce for careers in technology hasn’t changed at the\n'+
+            'same pace. This leaves people on that path feeling alone and unprepared. Techforce1 is ramping up to address the concerns of that group in a community wide collaborative\n'+
+            'way. We will serve people at multiple entry points with the coordination of multiple partners.\n'+''"
             [hideBreadcrumb]="true"
             [hasBgImage]="true"
             [class]="'py-5 px-2 home'"></app-content-header>
