--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,7 +9,7 @@
   <app-navbar *ngIf="isLoggedIn"></app-navbar>
   <router-outlet></router-outlet>
   <div id="app-spinner" [class.hide]="!settings.loadingSpinner">
-    <mat-spinner color="primary"></mat-spinner>
+<!--    <mat-spinner color="primary"></mat-spinner>-->
     <img src="./../assets/img/logo.png" class="animated-logo" alt="spinner">
     <h4>loading...</h4>
   </div>
