--- a/frontend/src/app/pages/pages.component.html
+++ b/frontend/src/app/pages/pages.component.html
@@ -8,7 +8,7 @@
                 <div fxLayout="row" fxLayoutAlign="center center">
                     <a routerLink="/" fxLayout="row" fxLayoutAlign="start center" class="logo" ngClass.xs="mobile" (click)="closeSubMenus()">
                         <img src="../../assets/img/logo.png" alt="logo" [@rotate]="showSidenav">
-                        <span class="mx-2">ANNULAR</span>
+                        <span class="mx-2">TechForce1</span>
                     </a>
                 </div>
                 <div fxLayout="row" fxLayoutAlign="start center" class="w-100">
@@ -24,7 +24,7 @@
                     <button mat-icon-button (click)="showInfoContent = !showInfoContent" fxShow="false" fxShow.gt-xs>
                         <mat-icon [@rotate]="showInfoContent" class="mat-icon-lg">expand_more</mat-icon>
                     </button>
-<!--                    <app-favorites fxShow="false" fxShow.gt-sm></app-favorites>-->
+                    <app-favorites fxShow="false" fxShow.gt-sm></app-favorites>
                 </div>
                 <div fxLayout="row" fxLayoutAlign="end center">
                     <div fxLayout="row" fxLayoutAlign="start center" fxShow="false" fxShow.gt-xs class="search-bar">
