Added Flags and Sidenav

--- a/frontend/src/app/pages/pages.component.html
+++ b/frontend/src/app/pages/pages.component.html
@@ -35,7 +35,7 @@
                             </button>
                         </form>
                     </div>
-<!--                    <app-flags-menu fxShow="false" fxShow.gt-sm></app-flags-menu>-->
+                    <app-flags-menu fxShow="false" fxShow.gt-sm></app-flags-menu>
 <!--                    <app-fullscreen></app-fullscreen>-->
 <!--                    <app-applications fxShow="false" fxShow.gt-sm></app-applications>-->
 <!--                    <app-messages fxShow="false" fxShow.gt-xs></app-messages>-->
@@ -51,10 +51,10 @@
             <mat-toolbar *ngIf="settings.fixedSidenav" class="top-toolbar">
                 <a routerLink="/" fxLayout="row" fxLayoutAlign="start center" class="logo">
                     <img src="../../assets/img/logo.png" alt="logo" [@rotate]="showSidenav">
-                    <span class="mx-2">ANNULAR</span>
+                    <span class="mx-2">TechForce1</span>
                 </a>
             </mat-toolbar>
-<!--            <app-sidenav></app-sidenav>-->
+            <app-sidenav></app-sidenav>
         </mat-drawer>
 
         <mat-drawer-content>
@@ -152,7 +152,7 @@
 
     <mat-toolbar color="primary" class="footer" [class.full-width]="!showSidenav">
         <a mat-raised-button color="accent" href="https://themeforest.net/item/annular-angular-material-design-admin-template/22537089" target="_blank">
-            <mat-icon class="mx-2">shopping_cart</mat-icon>Purchase ANNULAR
+            <mat-icon class="mx-2">shopping_cart</mat-icon>Join TechForce1
         </a>
     </mat-toolbar>
 </div>
