--- a/frontend/src/app/pages/admin/admin.component.html
+++ b/frontend/src/app/pages/admin/admin.component.html
@@ -1,1 +1,12 @@
-<h1>Help Me!</h1>
+<app-content-header
+  icon="dashboard"
+  desc="Welcome to Dashboard !"
+  [hideBreadcrumb]="true"
+  [hasBgImage]="true"
+  [class]="'py-3'"></app-content-header>
+
+<div class="p-2">
+  <app-tiles></app-tiles>
+
+
+</div>
