Created new tf1 folder structure

--- a/frontend/src/app/pages/landing/hero/hero.component.html
+++ b/frontend/src/app/pages/landing/hero/hero.component.html
@@ -53,7 +53,7 @@
       <path class="st3" d="M119.8,131.2c-0.3-0.3-0.7-0.3-1,0c-0.2,0.2-0.1,0.7,0.2,0.9l2.1,1.8l0.7-0.9L119.8,131.2z"/>
       <path class="st5" d="M104.1,122.6c-0.5-0.4-1.2-0.4-1.5,0.1s-0.2,1.2,0.3,1.5l0.8,0.6l1.3-1.6L104.1,122.6z"/>
 		</g>
-    <g id="Notre_Dame">
+    <g id="Notre_Dame" routerLink="/pages">
 			<path class="st5" d="M106.5,275c-0.3,0.3-0.4,0.8-0.2,1.1c2,2.5,4.2,5,6.4,7.3c0.3,0.3,0.8,0.3,1.1-0.1l4-3.9
 				c-2.4-2.6-4.8-5.2-7-8L106.5,275z"/>
       <path class="st2" d="M110.8,271.6c2.2,2.8,4.6,5.4,7,8l5.2-5c-2.3-2.4-4.5-4.9-6.6-7.5L110.8,271.6z"/>
