--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,17 +1,16 @@
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-  ~ navbar.component.html Copyright ©️ 2020 by the HabitRabbit developers (ardianq, lachchri16, sweiland, YellowIcicle).
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
-<mat-sidenav-container *ngIf="userService.hasPermission('HabitRabbit.view_profilepicture')" class="sidenav-container">
+<mat-sidenav-container [class.over]="showInfoContent" *ngIf="userService.hasPermission('HabitRabbit.view_profilepicture')" class="sidenav-container">
   <mat-sidenav-content>
-    <mat-toolbar >
+    <mat-toolbar class="top-toolbar" [class.mat-elevation-z2]="settings.fixedHeader" >
+
       <div class="logo pointer" routerLink="dashboard">
 <!--        <span class="levelText">{{level}}</span>-->
       </div>
+<!--      <app-top-info-content [showInfoContent]="showInfoContent" (onCloseInfoContent)="closeInfoContent(showInfoContent)"></app-top-info-content>-->
 <!--      <button mat-button style="padding: 0.1% 0.1% 0.3% 0.1%; min-width: 35px; line-height: 30px"><i-->
 <!--        class="material-icons pointer" routerLink="dashboard">home</i></button>-->
 <!--      <span class="title" routerLink="dashboard">TechForce1</span>-->
       <span class="menuspacer"></span>
+
       <mat-divider style="height:50%" vertical></mat-divider>
       <ng-container *ngIf="isSuperUser">
         <button [matMenuTriggerFor]="habitMenu" mat-button><i class="material-icons">playlist_add_check</i> Habit
