--- a/frontend/src/app/theme/components/user-menu/user-menu.component.html
+++ b/frontend/src/app/theme/components/user-menu/user-menu.component.html
@@ -3,40 +3,45 @@
 </button>
 
 <mat-menu #userMenu="matMenu" [overlapTrigger]="false" class="toolbar-dropdown-menu user-menu">
-    <!--<span (mouseleave)="userMenuTrigger.closeMenu()">-->        
+    <!--<span (mouseleave)="userMenuTrigger.closeMenu()">-->
         <mat-card fxLayout="row" fxLayoutAlign="space-around center" class="user-info p-0">
-            <img [src]="userImage" alt="user-image">
+<!--            <img [src]="userImage" alt="user-image">-->
             <div fxLayout="column" fxLayoutAlign="center center">
-                <h2>Emilio Verdines</h2>
-                <h3 class="secondary-text-color">Web developer</h3>
-                <p class="secondary-text-color">Member since May. 2016</p>
+              <div [ngStyle]="{'background-color': colorPP}" class="pp_color">
+                <img *ngIf="imageExists" [src]="picturesource" class="profilepic">
+              </div>
+              <span (window:resize)="onResize($event)" [ngStyle]="{'display': windowsize}"
+                    class="currentuser">{{username}}</span>
+<!--                <h2>Emilio Verdines</h2>-->
+<!--                <h3 class="secondary-text-color">Web developer</h3>-->
+<!--                <p class="secondary-text-color">Member since May. 2016</p>-->
             </div>
-        </mat-card>  
+        </mat-card>
         <mat-divider></mat-divider>
-        <a mat-menu-item routerLink="/profile/projects"> 
+        <a mat-menu-item routerLink="/profile/projects">
             <mat-icon>person</mat-icon>
-            <span>Profile</span> 
+            <span>Profile</span>
         </a>
-        <a mat-menu-item routerLink="/profile/user-info"> 
+        <a mat-menu-item routerLink="/profile/user-info">
             <mat-icon>edit</mat-icon>
-            <span>Edit Profile</span> 
+            <span>Edit Profile</span>
         </a>
-        <a mat-menu-item routerLink="settings"> 
+        <a mat-menu-item routerLink="settings">
             <mat-icon>settings</mat-icon>
-            <span>Settings</span> 
+            <span>Settings</span>
         </a>
-        <a mat-menu-item routerLink="/"> 
+        <a mat-menu-item routerLink="/">
             <mat-icon>lock</mat-icon>
-            <span>Lock screen</span> 
+            <span>Lock screen</span>
         </a>
-        <a mat-menu-item routerLink="help"> 
+        <a mat-menu-item routerLink="help">
             <mat-icon>help</mat-icon>
-            <span>Help</span> 
+            <span>Help</span>
         </a>
         <mat-divider></mat-divider>
-        <a mat-menu-item routerLink="/login"> 
+        <a mat-menu-item routerLink="/login">
             <mat-icon>power_settings_new</mat-icon>
-            <span>Log out</span> 
+            <span>Log out</span>
         </a>
     <!--</span>-->
 </mat-menu>
