Working on replacing replicas

--- a/frontend/src/app/theme/components/user-menu/user-menu.component.html
+++ b/frontend/src/app/theme/components/user-menu/user-menu.component.html
@@ -41,7 +41,7 @@
         <mat-divider></mat-divider>
         <a mat-menu-item routerLink="/login">
             <mat-icon>power_settings_new</mat-icon>
-            <span>Log out</span>
+            <span (click)="logout()">Log out</span>
         </a>
     <!--</span>-->
 </mat-menu>
