--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,6 +9,7 @@
      [class.mini]="settings.menuType == 'mini'">
 <!--  <app-navbar *ngIf="isLoggedIn"></app-navbar>-->
   <router-outlet></router-outlet>
+<!--  <div>-->
   <div id="app-spinner" [class.hide]="!settings.loadingSpinner">
 <!--    <mat-spinner color="primary"></mat-spinner>-->
     <img src="./../assets/img/logo.png" class="animated-logo" alt="spinner">
