--- a/frontend/src/app/pages/habit-list/main/dash-habit-list.component.html
+++ b/frontend/src/app/pages/habit-list/main/dash-habit-list.component.html
@@ -1,43 +1,54 @@
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-  ~ habit-list.component.html Copyright ©️ 2020 by the HabitRabbit developers (ardianq, lachchri16, sweiland, YellowIcicle).
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<app-content-header
+  [icon]="'list'"
+  [title]="'Habit List'"
+  [hideBreadcrumb]="false"
+  [hasBgImage]="true"
+  [class]="'pb-4'">
 
-<div *ngIf="userService.hasPermission('HabitRabbit.view_habit') && isSuperUser" class="mat-elevation-z8">
-  <table [dataSource]="dataSource" aria-label="Elements" class="full-width-table" mat-table matSort>
-    <ng-container matColumnDef="id">
-      <th *matHeaderCellDef mat-header-cell mat-sort-header>Actions</th>
-      <td *matCellDef="let row" mat-cell>
-        <button [routerLink]="'/habit-form/' + row.id" color="primary" mat-button>Edit</button>
-        <button (click)="deleteHabit(row.id)" color="warn" mat-button>Delete</button>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="member_id">
-      <th *matHeaderCellDef mat-header-cell mat-sort-header>Member</th>
-      <td *matCellDef="let row" mat-cell>{{row.member_id}}</td>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <th *matHeaderCellDef mat-header-cell mat-sort-header>Name</th>
-      <td *matCellDef="let row" mat-cell>{{row.name | titlecase}}</td>
-    </ng-container>
-    <ng-container matColumnDef="start_date">
-      <th *matHeaderCellDef mat-header-cell mat-sort-header>Start Date</th>
-      <td *matCellDef="let row" mat-cell>{{row.start_date | date}}</td>
-    </ng-container>
-    <ng-container matColumnDef="end_date">
-      <th *matHeaderCellDef mat-header-cell mat-sort-header>End Date</th>
-      <td *matCellDef="let row" mat-cell>{{row.end_date | date}}</td>
-    </ng-container>
-    <ng-container matColumnDef="priority">
-      <th *matHeaderCellDef mat-header-cell mat-sort-header>Priority</th>
-      <td *matCellDef="let row" mat-cell>{{row.priority | number}}</td>
-    </ng-container>
+</app-content-header>
 
-    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
-    <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
-  </table>
+<div fxLayout="column" fxLayout.gt-sm="row wrap" class="p-2">
+  <div fxFlex="100" class="p-2">
+
+  <div *ngIf="userService.hasPermission('HabitRabbit.view_habit') && isSuperUser" class="mat-elevation-z8">
+      <table [dataSource]="dataSource" aria-label="Elements" class="full-width-table" mat-table matSort>
+        <ng-container matColumnDef="id">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header>Actions</th>
+          <td *matCellDef="let row" mat-cell>
+            <button [routerLink]="'/habit-form/' + row.id" color="primary" mat-button>Edit</button>
+            <button (click)="deleteHabit(row.id)" color="warn" mat-button>Delete</button>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="member_id">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header>Member</th>
+          <td *matCellDef="let row" mat-cell>{{row.member_id}}</td>
+        </ng-container>
+        <ng-container matColumnDef="name">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header>Name</th>
+          <td *matCellDef="let row" mat-cell>{{row.name | titlecase}}</td>
+        </ng-container>
+        <ng-container matColumnDef="start_date">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header>Start Date</th>
+          <td *matCellDef="let row" mat-cell>{{row.start_date | date}}</td>
+        </ng-container>
+        <ng-container matColumnDef="end_date">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header>End Date</th>
+          <td *matCellDef="let row" mat-cell>{{row.end_date | date}}</td>
+        </ng-container>
+        <ng-container matColumnDef="priority">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header>Priority</th>
+          <td *matCellDef="let row" mat-cell>{{row.priority | number}}</td>
+        </ng-container>
+
+        <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+        <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
+      </table>
+    </div>
+    <mat-paginator #paginator
+                   [pageIndex]="0"
+                   [pageSizeOptions]="[10, 30, 50, 100]"
+                   [pageSize]="10">
+    </mat-paginator>
+
+  </div>
 </div>
-<mat-paginator #paginator
-               [pageIndex]="0"
-               [pageSizeOptions]="[10, 30, 50, 100]"
-               [pageSize]="10">
-</mat-paginator>
