--- a/frontend/src/app/message-form/message-form.component.html
+++ b/frontend/src/app/message-form/message-form.component.html
@@ -1,37 +1,48 @@
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-  ~ message-form.component.html Copyright ©️ 2020 by the HabitRabbit developers (ardianq, lachchri16, sweiland, YellowIcicle).
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<app-content-header
+  [icon]="'card_membership'"
+  [title]="'New Message'"
+  [hideBreadcrumb]="false"
+  [hasBgImage]="true"
+  [class]="'pb-4'"></app-content-header>
 
-<form (ngSubmit)="onSubmit()" *ngIf="userService.hasPermission('HabitRabbit.change_message') && isSuperUser" [formGroup]="messageForm"
-      novalidate>
-  <mat-card class="message-card">
-    <mat-card-header>
-      <mat-card-title>Edit Message</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <div class="row">
-        <div class="col">
-          <mat-form-field class="full-width">
-            <input formControlName="title" matInput placeholder="Title">
-            <mat-hint align="end">Title of the message</mat-hint>
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <mat-select formControlName="type" placeholder="Type">
-              <mat-option *ngFor="let typeOption of typeOptions"
-                          [value]="typeOption.id">{{typeOption.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-      </div>
-      <div class="row">
-        <mat-form-field class="widthclass">
-          <input formControlName="message" matInput placeholder="Message">
-          <mat-hint align="end">The message to be displayed</mat-hint>
-        </mat-form-field>
-      </div>
-    </mat-card-content>
-    <mat-card-actions>
-      <button color="primary" mat-raised-button type="submit">Submit</button>
-    </mat-card-actions>
-  </mat-card>
-</form>
+<div fxLayout="column" fxLayout.gt-sm="row wrap" class="p-2">
+  <div fxFlex="100" class="p-2">
+    <mat-card class="custom-card">
+
+      <form (ngSubmit)="onSubmit()" *ngIf="userService.hasPermission('HabitRabbit.change_message') && isSuperUser" [formGroup]="messageForm"
+            novalidate>
+        <mat-card class="message-card">
+          <mat-card-header>
+            <mat-card-title>Edit Message</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <div class="row">
+              <div class="col">
+                <mat-form-field class="full-width">
+                  <input formControlName="title" matInput placeholder="Title">
+                  <mat-hint align="end">Title of the message</mat-hint>
+                </mat-form-field>
+                <mat-form-field class="full-width">
+                  <mat-select formControlName="type" placeholder="Type">
+                    <mat-option *ngFor="let typeOption of typeOptions"
+                                [value]="typeOption.id">{{typeOption.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <mat-form-field class="widthclass">
+                <input formControlName="message" matInput placeholder="Message">
+                <mat-hint align="end">The message to be displayed</mat-hint>
+              </mat-form-field>
+            </div>
+          </mat-card-content>
+          <mat-card-actions>
+            <button color="primary" mat-raised-button type="submit">Submit</button>
+          </mat-card-actions>
+        </mat-card>
+      </form>
+
+    </mat-card>
+  </div>
+</div>
