Included the type-form.component

--- a/frontend/src/app/pages/habit-dashboard/barbicon/barbicon.component.html
+++ b/frontend/src/app/pages/habit-dashboard/barbicon/barbicon.component.html
@@ -72,7 +72,7 @@
               <div [ngStyle]="{'background-color': profileColor}" class="profileContainer">
                 <img *ngIf="profileImage" [src]="profileImage" class="profilePicture">
                 <div [ngStyle]="{'background-color': profileColor, 'opacity': 0.8}" class="changePicture">
-                  <button class="buttonPicture" routerLink="../profile-picture-form"></button>
+                  <button class="buttonPicture" routerLink="../../../profile-picture-form"></button>
                   Change Profile<br>Picture
                 </div>
               </div>
